# RawCountsBIASscale

./: README.md  graph_test_v1.0.py  graph_test_v2.0.py  indicador.py  indicador_v0.py  indicador_v1.1.py  indicador_v1.10.py  indicador_v1.11.py  indicador_v1.12.py  indicador_v1.4.py  indicador_v1.5.py  indicador_v1.6.1.py  indicador_v1.6.py  indicador_v1.7.py  indicador_v1.8.py  indicador_v1.9.py  indicador_v1.9.spec  pyproject.toml  setup.py
.github/workflows/: pr-arena-workflow.yml  secret_scan.yml
legacy_code/graph_tests/: graph_test_v0.0.py
legacy_code/indicator_versions/: indicador_v1.0.py  indicador_v1.11.py  indicador_v1.2.py  indicador_v1.3.py  indicador_v1.8.py
scripts/: build_debian_trixie_amd64.sh  build_debian_trixie_arm64.sh  build_macos_arm64.sh  build_nuitka_unix.sh  build_windows_amd64.ps1
