[project]
name = "RawCountsBIASscale"
version = "1.12"
requires-python = ">=3.10"
description = "Raw counts calculator for SCADA BIAS/SCALE"
dependencies = []

[project.optional-dependencies]
build = [
    "cx_Freeze",
]

[build-system]
requires = ["setuptools>=61.0", "cx-Freeze"]
build-backend = "setuptools.build_meta"
